# trpg-workbench

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.agents/plans/: m10-agent-orchestration.md  m11-onboarding.md  m12-agent-transparency.md  m13-visual-language.md  m14-help-rebuild.md  m15-knowledge-under-ruleset.md  m16-asset-type-openness.md  m17-user-agent-skills.md  m18-file-first-workspace.md  m19-agent-context-control.md  m20-agent-quality.md  m21-chat-sessions.md  m22-ruleset-ux-polish.md  m23-agent-question-interrupt.md  m24-knowledge-retrieval-quality.md  m25-llm-profile-fields-cleanup.md  m26-explore-prompt-integrity.md  m27-asset-ops-and-batch.md  m28-native-sdk-agent-runtime.md  m29-agent-interaction-quality.md  m3-asset-system.md  m30-asset-type-system.md  m31-chunk-type-system.md  m32-asset-experience.md  m34-model-config-ux.md  m4-agent-creation.md  m6-model-management.md  m7-model-discovery.md  m8-knowledge-preview.md  m9-smoke-and-help.md  m9a-ruleset-unification.md  roadmap.md
.github/workflows/: ci.yml  release.yml
.opencode/commands/: ui-review.md  ui-smoke.md
apps/backend/: requirements.txt  server.py  trpg-backend.spec
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/benchmark-reviews/: README.md
docs/test/: manual_test.md
scripts/: dev.sh
(+315 files in other folders)
