[package]
name = "trpg-workbench"
version = "0.1.0"
description = "TRPG 主持人创作工作台"
authors = ["TRPG Workbench Contributors"]
edition = "2021"

[lib]
name = "trpg_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30", default-features = false }
tauri-plugin-dialog = "2.7.0"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
